--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,6 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "components/Section.jsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "components/Section.jsx", "components/SignInBox.jsx"],
   "exclude": ["node_modules"]
 }
